tests/cases_invalid/structs/zero_layouts/.expected
error: non-zero `u32` literal out of range
 --> ./cases_invalid/structs/zero_layouts/main.shd:1:12
  |
1 | gpu layout(0, 16) struct vec2f {
  |            ^ here
  |
